force-app/main/default/objects/OPP_Panel__c/OPP_Panel__c.object-meta.xml
<CustomObject>
    <label>Panel</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Panel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>