force-app/main/default/objects/OPP_Panel__c/fields/ActualAdjRatePct__c.field-meta.xml
<CustomField>
    <fullName>ActualAdjRatePct__c</fullName>
    <label>Actual Adj Rate (%)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>