force-app/main/default/objects/OPP_Panel__c/fields/BrkgAdj_is__c.field-meta.xml
<CustomField>
    <fullName>BrkgAdj_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brkg Adj (Y/N)</label>
    <type>Checkbox</type>
</CustomField>