force-app/main/default/objects/OPP_Panel__c/fields/BrkgBase__c.field-meta.xml
<CustomField>
    <fullName>BrkgBase__c</fullName>
    <label>Brokerage Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net</fullName>
            </value>
            <value>
                <fullName>Gross</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>