force-app/main/default/objects/OPP_Panel__c/fields/ClmNetRI__c.field-meta.xml
<CustomField>
    <fullName>ClmNetRI__c</fullName>
    <label>Net to RI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>