force-app/main/default/objects/OPP_Panel__c/fields/ClmNetToPlacingTPP__c.field-meta.xml
<CustomField>
    <fullName>ClmNetToPlacingTPP__c</fullName>
    <label>Net to Placing TPP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>