force-app/main/default/objects/OPP_Panel__c/fields/ClmNetToPlacingTPPLK__c.field-meta.xml
<CustomField>
    <fullName>ClmNetToPlacingTPPLK__c</fullName>
    <label>Net to Placing TPP (LK)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>