force-app/main/default/objects/OPP_Panel__c/fields/CO_is__c.field-meta.xml
<CustomField>
    <fullName>CO_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO</label>
    <type>Checkbox</type>
</CustomField>