force-app/main/default/objects/OPP_Panel__c/fields/CoBroker_lk__c.field-meta.xml
<CustomField>
    <fullName>CoBroker_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Panels (Co-borker Name)</relationshipLabel>
    <relationshipName>PanelsAsCoBroker</relationshipName>
    <type>Lookup</type>
</CustomField>