force-app/main/default/objects/OPP_Panel__c/fields/CoBrokerContact_lk__c.field-meta.xml
<CustomField>
    <fullName>CoBrokerContact_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placing Co-broker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Panels (Placing Co-broker Contact)</relationshipLabel>
    <relationshipName>PanelsAsCoBroker</relationshipName>
    <type>Lookup</type>
</CustomField>