force-app/main/default/objects/OPP_Panel__c/fields/CobrokingType__c.field-meta.xml
<CustomField>
    <fullName>CobrokingType__c</fullName>
    <label>Co-Broking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPO</fullName>
            </value>
            <value>
                <fullName>CPS</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>CPT-CPO</fullName>
            </value>
            <value>
                <fullName>CPT-CPS</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>