force-app/main/default/objects/OPP_Panel__c/fields/Excess__c.field-meta.xml
<CustomField>
    <fullName>Excess__c</fullName>
    <label>Excess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>