force-app/main/default/objects/OPP_Panel__c/fields/ExpirationDate_fm__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate_fm__c</fullName>
    <formula>Layer_md__r.Placement_lk__r.ExpirationDate__c</formula>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>