force-app/main/default/objects/OPP_Panel__c/fields/FacilityParticipant_lk__c.field-meta.xml
<CustomField>
    <fullName>FacilityParticipant_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Participant</label>
    <referenceTo>COM_FacilityParticipant__c</referenceTo>
    <relationshipLabel>Panels</relationshipLabel>
    <relationshipName>PanelsByFacilityParticipants</relationshipName>
    <type>Lookup</type>
</CustomField>