force-app/main/default/objects/OPP_Panel__c/fields/Finalize_is__c.field-meta.xml
<CustomField>
    <fullName>Finalize_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalize</label>
    <type>Checkbox</type>
</CustomField>