force-app/main/default/objects/OPP_Panel__c/fields/GrossPrem__c.field-meta.xml
<CustomField>
    <fullName>GrossPrem__c</fullName>
    <label>Gross Prem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>