force-app/main/default/objects/OPP_Panel__c/fields/GrossPremDP__c.field-meta.xml
<CustomField>
    <fullName>GrossPremDP__c</fullName>
    <label>Gross Prem(Before DP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>