force-app/main/default/objects/OPP_Panel__c/fields/InceptionDate_fm__c.field-meta.xml
<CustomField>
    <fullName>InceptionDate_fm__c</fullName>
    <formula>Layer_md__r.Placement_lk__r.InceptionDate__c</formula>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>