force-app/main/default/objects/OPP_Panel__c/fields/Layer_md__c.field-meta.xml
<CustomField>
    <fullName>Layer_md__c</fullName>
    <label>Layer</label>
    <referenceTo>OPP_Layer__c</referenceTo>
    <relationshipLabel>Panels</relationshipLabel>
    <relationshipName>Panels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>