force-app/main/default/objects/OPP_Panel__c/fields/LayerType_fm__c.field-meta.xml
<CustomField>
    <fullName>LayerType_fm__c</fullName>
    <formula>TEXT(Layer_md__r.Type__c)</formula>
    <label>Layer Type</label>
    <type>Text</type>
</CustomField>