force-app/main/default/objects/OPP_Panel__c/fields/Leader_is__c.field-meta.xml
<CustomField>
    <fullName>Leader_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leader</label>
    <type>Checkbox</type>
</CustomField>