force-app/main/default/objects/OPP_Panel__c/fields/LKAdminFee__c.field-meta.xml
<CustomField>
    <fullName>LKAdminFee__c</fullName>
    <label>LK Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>