force-app/main/default/objects/OPP_Panel__c/fields/LKCoBrokingSharing_is__c.field-meta.xml
<CustomField>
    <fullName>LKCoBrokingSharing_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LK  Co-broking Sharing (Placing)</label>
    <type>Checkbox</type>
</CustomField>