force-app/main/default/objects/OPP_Panel__c/fields/LKPlacing_is__c.field-meta.xml
<CustomField>
    <fullName>LKPlacing_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placing</label>
    <type>Checkbox</type>
</CustomField>