force-app/main/default/objects/OPP_Panel__c/fields/LKPlacingSharingPct__c.field-meta.xml
<CustomField>
    <fullName>LKPlacingSharingPct__c</fullName>
    <label>LK Placing Sharing(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>