force-app/main/default/objects/OPP_Panel__c/fields/LKPlacingTPPBrkg__c.field-meta.xml
<CustomField>
    <fullName>LKPlacingTPPBrkg__c</fullName>
    <label>Placing TPP Brokerage (LK)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>