force-app/main/default/objects/OPP_Panel__c/fields/LKProducingSharing_is__c.field-meta.xml
<CustomField>
    <fullName>LKProducingSharing_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LK Producing Sharing</label>
    <type>Checkbox</type>
</CustomField>