force-app/main/default/objects/OPP_Panel__c/fields/LKProducingTPPBrkg__c.field-meta.xml
<CustomField>
    <fullName>LKProducingTPPBrkg__c</fullName>
    <label>Producing TPP Brokerage (LK)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>