force-app/main/default/objects/OPP_Panel__c/fields/LKReBrkge__c.field-meta.xml
<CustomField>
    <fullName>LKReBrkge__c</fullName>
    <label>LK Re Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>