force-app/main/default/objects/OPP_Panel__c/fields/LKTPPBrkge__c.field-meta.xml
<CustomField>
    <fullName>LKTPPBrkge__c</fullName>
    <label>LK TPP Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>