force-app/main/default/objects/OPP_Panel__c/fields/LOL__c.field-meta.xml
<CustomField>
    <fullName>LOL__c</fullName>
    <label>LOL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>