force-app/main/default/objects/OPP_Panel__c/fields/MGAName_lk__c.field-meta.xml
<CustomField>
    <fullName>MGAName_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MGA Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Panels (MGA Name)</relationshipLabel>
    <relationshipName>PanelsAsMGA</relationshipName>
    <type>Lookup</type>
</CustomField>