force-app/main/default/objects/OPP_Panel__c/fields/NetLKTPP__c.field-meta.xml
<CustomField>
    <fullName>NetLKTPP__c</fullName>
    <label>Net to LK TPP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>