force-app/main/default/objects/OPP_Panel__c/fields/NetProducingCobrker__c.field-meta.xml
<CustomField>
    <fullName>NetProducingCobrker__c</fullName>
    <label>Net to Producing Co-broker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>