force-app/main/default/objects/OPP_Panel__c/fields/NetProducingTPP__c.field-meta.xml
<CustomField>
    <fullName>NetProducingTPP__c</fullName>
    <label>Net to Producing TPP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>