force-app/main/default/objects/OPP_Panel__c/fields/NetRI__c.field-meta.xml
<CustomField>
    <fullName>NetRI__c</fullName>
    <label>Net to RI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>