force-app/main/default/objects/OPP_Panel__c/fields/NetToLKPrem__c.field-meta.xml
<CustomField>
    <fullName>NetToLKPrem__c</fullName>
    <label>Net to LK Prem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>