force-app/main/default/objects/OPP_Panel__c/fields/NetToUW__c.field-meta.xml
<CustomField>
    <fullName>NetToUW__c</fullName>
    <label>Net to UW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>