force-app/main/default/objects/OPP_Panel__c/fields/OldLayerId__c.field-meta.xml
<CustomField>
    <fullName>OldLayerId__c</fullName>
    <description>복제 생성 대상을 선별하기 위한 필드.</description>
    <label>OldLayerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>