force-app/main/default/objects/OPP_Panel__c/fields/OldPanelId__c.field-meta.xml
<CustomField>
    <fullName>OldPanelId__c</fullName>
    <label>OldPanelId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>