force-app/main/default/objects/OPP_Panel__c/fields/Opportunity_lk__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Panels</relationshipLabel>
    <relationshipName>Panels</relationshipName>
    <type>Lookup</type>
</CustomField>