force-app/main/default/objects/OPP_Panel__c/fields/OpportunityId_fm__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId_fm__c</fullName>
    <description>연결된 Layer.Opportunity Record Id (Flow 에서 조회 조건으로 활용을 위해)</description>
    <formula>CASESAFEID(Layer_md__r.Opportunity_md__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>