force-app/main/default/objects/OPP_Panel__c/fields/OtherDeductionPct__c.field-meta.xml
<CustomField>
    <fullName>OtherDeductionPct__c</fullName>
    <label>Other Deduction(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>