force-app/main/default/objects/OPP_Panel__c/fields/PlacementId_fm__c.field-meta.xml
<CustomField>
    <fullName>PlacementId_fm__c</fullName>
    <formula>CASESAFEID(  Layer_md__r.Placement_lk__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlacementId</label>
    <type>Text</type>
</CustomField>