force-app/main/default/objects/OPP_Panel__c/fields/PlacementLink_fm__c.field-meta.xml
<CustomField>
    <fullName>PlacementLink_fm__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; PlacementId_fm__c,  Layer_md__r.Placement_lk__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement_Link</label>
    <type>Text</type>
</CustomField>