force-app/main/default/objects/OPP_Panel__c/fields/PlacingSettlementType__c.field-meta.xml
<CustomField>
    <fullName>PlacingSettlementType__c</fullName>
    <label>Settlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Separate</fullName>
            </value>
            <value>
                <fullName>Together</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>