force-app/main/default/objects/OPP_Panel__c/fields/PlacingTPPAdminFeePct__c.field-meta.xml
<CustomField>
    <fullName>PlacingTPPAdminFeePct__c</fullName>
    <label>TPP Admin Fee(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>