force-app/main/default/objects/OPP_Panel__c/fields/PlacingTPPBrkge__c.field-meta.xml
<CustomField>
    <fullName>PlacingTPPBrkge__c</fullName>
    <label>Placing TPP Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>