force-app/main/default/objects/OPP_Panel__c/fields/PPWDate__c.field-meta.xml
<CustomField>
    <fullName>PPWDate__c</fullName>
    <label>PPW Date</label>
    <type>Date</type>
</CustomField>