force-app/main/default/objects/OPP_Panel__c/fields/PPWType__c.field-meta.xml
<CustomField>
    <fullName>PPWType__c</fullName>
    <label>PPW Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TOR</fullName>
            </value>
            <value>
                <fullName>LWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>