force-app/main/default/objects/OPP_Panel__c/fields/Reinsurer_lk__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reinsurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MarketLinesAsReinsurer</relationshipName>
    <type>Lookup</type>
</CustomField>