force-app/main/default/objects/OPP_Panel__c/fields/RIContact_lk__c.field-meta.xml
<CustomField>
    <fullName>RIContact_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Re-insurer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Panels (Re-insurer contact)</relationshipLabel>
    <relationshipName>PanelAsRIContact</relationshipName>
    <type>Lookup</type>
</CustomField>