force-app/main/default/objects/OPP_Panel__c/fields/Security_lk__c.field-meta.xml
<CustomField>
    <fullName>Security_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Security</label>
    <referenceTo>ACC_AdditionalInfo__c</referenceTo>
    <relationshipLabel>Panels</relationshipLabel>
    <relationshipName>MarketLinesAsSecurity</relationshipName>
    <type>Lookup</type>
</CustomField>