force-app/main/default/objects/OPP_Panel__c/fields/SendToCloseDate_fm__c.field-meta.xml
<CustomField>
    <fullName>SendToCloseDate_fm__c</fullName>
    <formula>Layer_md__r.Placement_lk__r.PlacementClosingDate__c</formula>
    <label>Send to Close Date</label>
    <type>Date</type>
</CustomField>