force-app/main/default/objects/OPP_Panel__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <label>No.</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>