force-app/main/default/objects/OPP_Panel__c/fields/Signed__c.field-meta.xml
<CustomField>
    <fullName>Signed__c</fullName>
    <label>Signed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>