force-app/main/default/objects/OPP_Panel__c/fields/ToLKAdminFee__c.field-meta.xml
<CustomField>
    <fullName>ToLKAdminFee__c</fullName>
    <label>to LK (+)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>