force-app/main/default/objects/OPP_Panel__c/fields/ToProducingAdminFee__c.field-meta.xml
<CustomField>
    <fullName>ToProducingAdminFee__c</fullName>
    <label>to Producing (-)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>