force-app/main/default/objects/OPP_Panel__c/fields/TotalBrkg__c.field-meta.xml
<CustomField>
    <fullName>TotalBrkg__c</fullName>
    <label>Total Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>