force-app/main/default/objects/OPP_Panel__c/fields/UnderwriterRefNo__c.field-meta.xml
<CustomField>
    <fullName>UnderwriterRefNo__c</fullName>
    <label>UNDERWRITER REF NO.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>