force-app/main/default/objects/OPP_Panel__c/fields/Written__c.field-meta.xml
<CustomField>
    <fullName>Written__c</fullName>
    <label>Written</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>